# affiliagent-yc

./: AGENTS.md  ESSENTIALS.md  README.md  ROADMAP.md  USE_GUIDE.md  package.json  pnpm-lock.yaml
apps/web/: README.md  next.config.ts  package.json
apps/web/data/: app.db
apps/web/prisma/: schema.prisma  seed.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/generate-video/: route.ts
apps/web/src/app/api/products/: route.ts
apps/web/src/app/api/run/: route.ts
apps/web/src/app/api/run-logs/: route.ts
apps/web/src/app/api/videos/: route.ts
apps/web/src/components/: live-dashboard.tsx  product-modal.tsx
apps/web/src/lib/: amazon-paapi.ts  browserbot.ts  hyperspell.ts  llm.ts  pipeline.ts
services/browserbot/: main.py  pyproject.toml  requirements.txt
services/browserbot/browserbot_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
